Fixing notification location on invite-component and overlaying text on background på home-component

--- a/imports/ui/stylesheets/custom.css
+++ b/imports/ui/stylesheets/custom.css
@@ -128,6 +128,11 @@ a span {
 		font-size: 13px;
     	line-height: 24px;
 	}
+
+	#welcomeTextSection {
+		padding: 0;
+		margin-bottom: 0;
+	}
 }
 
 
