Making <p>-elements a fixed height even with no content

--- a/imports/ui/stylesheets/custom.css
+++ b/imports/ui/stylesheets/custom.css
@@ -13,6 +13,13 @@ a span {
 	color: #86c8bc !important;
 }
 
+
+/*For BarstenViewer*/
+.barsten-viewer p {
+	min-height: 24px;
+}
+/*End for BarstenViewer*/
+
 .page-single-content {
 	margin-top: 50px;
 }
