--- a/imports/ui/stylesheets/custom.css
+++ b/imports/ui/stylesheets/custom.css
@@ -13,6 +13,13 @@ a span {
 	color: #86c8bc !important;
 }
 
+.SingleDatePicker input {
+	margin-bottom: 0px;
+}
+
+.SingleDatePicker {
+	float: right;
+}
 
 /*For BarstenViewer*/
 .barsten-viewer p {
