--- a/imports/ui/stylesheets/custom.css
+++ b/imports/ui/stylesheets/custom.css
@@ -31,6 +31,14 @@ a span {
 	margin-top: 50px;
 }
 
+.bg-primary h5 {
+	color: black;
+}
+
+.bg-primary .btn {
+	border: 2px solid #86c8bc;
+}
+
 #news-wapper .row,
 #aboutSection .row {
   display: -webkit-box;
